@@ -4,11 +4,9 @@ import org.slf4j.Logger;
 import work.lclpnet.kibu.translate.Translations;
 import work.lclpnet.kibu.translate.util.ModTranslations;
 import work.lclpnet.translations.DefaultLanguageTranslator;
-import work.lclpnet.translations.loader.translation.DirectTranslationLoader;
-import work.lclpnet.translations.loader.translation.MultiTranslationLoader;
-import work.lclpnet.translations.network.LCLPNetworkLanguageLoader;
+import work.lclpnet.translations.loader.MultiTranslationLoader;
+import work.lclpnet.translations.network.LCLPNetworkTranslationLoader;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
@@ -17,15 +15,14 @@ class MCServerTranslations {
     private MCServerTranslations() {}
 
     public static Result load(Logger logger) {
-        var builtinTranslationLoaderLoader = ModTranslations.assetTranslationLoader(MCServerFabricMod.ID, logger);
+        var parent = new MultiTranslationLoader();
+        parent.addLoader(ModTranslations.assetTranslationLoader(MCServerFabricMod.ID, logger));
 
-        List<String> apps = Collections.singletonList("mc_server");
-        var remoteLanguageLoader = new LCLPNetworkLanguageLoader(apps, null, logger);
-        var remoteTranslationLoader = new DirectTranslationLoader(remoteLanguageLoader);
+        List<String> apps = List.of("mc_server");
+        var remoteLoader = new LCLPNetworkTranslationLoader(apps, null, logger);
+        parent.addLoader(remoteLoader);
 
-        var translationLoader = new MultiTranslationLoader(builtinTranslationLoaderLoader, remoteTranslationLoader);
-
-        DefaultLanguageTranslator translator = new DefaultLanguageTranslator(translationLoader);
+        DefaultLanguageTranslator translator = new DefaultLanguageTranslator(parent);
 
         Translations translations = new Translations(translator);
         var whenLoaded = translator.reload();
